Fix dark mode

--- a/MainSystem/public/css/style.css
+++ b/MainSystem/public/css/style.css
@@ -39,7 +39,7 @@
 .font-footer {
     font-family: 'Hannari', sans-serif; 
     font-size: 2em; 
-    margin-left: 0px;
+    margin-left: 10px;
 }
 
 .font-footer2 {
